--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1608,6 +1608,7 @@
     "Savings Account": "Savings Account",
     "Certificate of Deposit": "Certificate of Deposit",
     "Balance": "Balance",
+    "Original Currency Balance": "Original Currency Balance",
     "Outstanding Balance": "Outstanding Balance",
     "Unable to retrieve account list": "Unable to retrieve account list",
     "Account list is up to date": "Account list is up to date",
