--- a/src/locales/zh_Hant.json
+++ b/src/locales/zh_Hant.json
@@ -1608,6 +1608,7 @@
     "Savings Account": "儲蓄帳戶",
     "Certificate of Deposit": "定期存款",
     "Balance": "餘額",
+    "Original Currency Balance": "原幣餘額",
     "Outstanding Balance": "未清餘額",
     "Unable to retrieve account list": "無法取得帳戶清單",
     "Account list is up to date": "帳戶清單已是最新",
